--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* Oculta el elemento en todas las situaciones excepto en pantalla completa */
+@media (max-width: 1199px) {
+  .hidden-fullscreen {
+    display: none;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* Muestra el elemento solo en pantalla completa */
+:-webkit-full-screen .hidden-fullscreen,
+:-moz-full-screen .hidden-fullscreen,
+:-ms-fullscreen .hidden-fullscreen,
+:fullscreen .hidden-fullscreen {
+  display: block;
 }
